@@ -14,6 +14,7 @@
 * Adding icons to encoders drop down
 * Adding video filename path
 * Adding check for new ffmpeg on startup
+* Adding #69 nice feature for language selection (thanks to HannesJo0139)
 * Fixing Windows taskbar does not always show icon
 * Fixing #55 GUI logs by splitting them from core logs
 * Fixing that mkv cover attachments would show as video tracks
